2 sections of scraping complete

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b8e987d0",
+   "id": "b2a56532",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "id": "bb9a096c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# packages in environment at C:\\Users\\Rob\\anaconda3\\envs\\PythonData:\n",
+      "#\n",
+      "# Name                    Version                   Build  Channel\n",
+      "python-dotenv             0.20.0                   pypi_0    pypi\n"
+     ]
+    }
+   ],
+   "source": [
+    "!conda list env"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
-   "id": "114345da",
+   "id": "0b84ae3c",
    "metadata": {},
    "outputs": [
     {
@@ -46,16 +67,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8a4a645",
+   "id": "72abae54",
    "metadata": {},
    "source": [
-    "# NASA Mars News"
+    "# Step 1 - Scraping\n",
+    "## NASA Mars News"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a9ba5b8f",
+   "id": "74a9a7cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "22923fee",
+   "id": "cbf469b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7495f805",
+   "id": "6d5e226c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -86,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "169b26c5",
+   "id": "30884359",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "870e719a",
+   "id": "a3f0a607",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "17c2d473",
+   "id": "f6ebbb1c",
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "7ca65d10",
+   "id": "19b8f906",
    "metadata": {},
    "outputs": [
     {
@@ -835,16 +857,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daf98b34",
+   "id": "e492ee3b",
    "metadata": {},
    "source": [
-    "# JPL Mars Space Images - Featured Image"
+    "## JPL Mars Space Images - Featured Image"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d83bb8cb",
+   "id": "b52a7d62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "fbe36399",
+   "id": "43854ca9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "802fe9ee",
+   "id": "d97e3cbf",
    "metadata": {},
    "outputs": [
     {
@@ -887,9 +909,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "04b11f07",
+   "metadata": {},
+   "source": [
+    "## Mars Facts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2150ce04",
+   "id": "157e25d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89c4c0a0",
+   "metadata": {},
+   "source": [
+    "## Mars Hemispheres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebb0ed9b",
    "metadata": {},
    "outputs": [],
    "source": []
